--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -18,14 +18,7 @@
 <body ng-app="edvances">
     <!-- <navbar></navbar> -->
     <div class="app" id ="app">
-        <navbar></navbar>
-        <div class="app-aside hidden-xs bg-black">
-                <aside></aside>
-            </div>
-        <div  class="app-content fade-in-up">
-            <div ui-view>
-            </div>
-        </div>
+        <div ui-view></div>
         <footer></footer>
     </div>
 </body>
