--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" type="text/css" href="/styles.css"/>
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css"/>
     <script src="/lodash/index.js"></script>
+    <script src="/jquery/dist/jquery.js"></script>
+    <script src="/bootstrap/dist/js/bootstrap.js"></script>
+    <script scr="/jquery-ui/jquery-ui.js"></script>
+    <script src="/jquery.hotkeys/jquery.hotkeys.js"></script>
+    <script src="/bootstrap-wysiwyg/bootstrap-wysiwyg.js"></script>
     <script src="/angular/angular.js"></script>
     <script src="/angular-animate/angular-animate.js"></script>
     <script src="/angular-ui-router/release/angular-ui-router.js"></script>
