--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -14,6 +14,8 @@
     <script src="/bootstrap-wysiwyg/bootstrap-wysiwyg.js"></script>
     <script src="/angular/angular.js"></script>
     <script src="/angular-animate/angular-animate.js"></script>
+    <script src="/angular-file-saver/dist/angular-file-saver.bundle.js"></script>
+    <!-- <script src="/angular-file-saver/dist/angular-file-saver.js"></script> -->
     <script src="/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="/angular-ui-bootstrap/dist/ui-bootstrap.js"></script>
     <script src="/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
