azure can has upload

--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -30,6 +30,7 @@
 <body ng-app="edvances">
     <!-- <navbar></navbar> -->
     <div class="app" id ="app">
+        <home-nav></home-nav>
         <div ui-view></div>
     </div>
 </body>
