--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -18,6 +18,7 @@
     <script src="/angular-animate/angular-animate.js"></script>
     <script src="/moment/moment.js"></script>
     <script src="/angular-moment/angular-moment.js"></script>
+    <script src="/angular-ui-router-styles/ui-router-styles.js"></script>
     <script src="/angular-file-saver/dist/angular-file-saver.bundle.js"></script>
     <script src="/angular-file-saver/dist/angular-file-saver.js"></script>
     <script src="/ng-file-upload/dist/ng-file-upload.js"></script>
@@ -27,9 +28,9 @@
     <script src="https://meet.jit.si/external_api.js"></script>
     <script src="/main.js"></script>
 </head>
-<body ng-app="edvances">
+<body ng-app="edvances" ui-router-styles ng-cloak>
     <!-- <navbar></navbar> -->
-    <div class="app" id ="app">
+    <div class="app" id ="app" >
         <home-nav></home-nav>
         <div ui-view></div>
     </div>
