--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="edvances" ui-router-styles ng-cloak>
 <head>
     <base href="/" />
     <title>Edvances - The Online Live Education Platform</title>
@@ -16,9 +16,9 @@
     <script src="/bootstrap-wysiwyg/bootstrap-wysiwyg.js"></script>
     <script src="/angular/angular.js"></script>
     <script src="/angular-animate/angular-animate.js"></script>
+    <script src="/angular-css/angular-css.js"></script>
     <script src="/moment/moment.js"></script>
     <script src="/angular-moment/angular-moment.js"></script>
-    <script src="/angular-ui-router-styles/ui-router-styles.js"></script>
     <script src="/angular-file-saver/dist/angular-file-saver.bundle.js"></script>
     <script src="/angular-file-saver/dist/angular-file-saver.js"></script>
     <script src="/ng-file-upload/dist/ng-file-upload.js"></script>
@@ -28,7 +28,7 @@
     <script src="https://meet.jit.si/external_api.js"></script>
     <script src="/main.js"></script>
 </head>
-<body ng-app="edvances" ui-router-styles ng-cloak>
+<body>
     <!-- <navbar></navbar> -->
     <div class="app" id ="app" >
         <home-nav></home-nav>
