--- a/browser/theme/teacher.css
+++ b/browser/theme/teacher.css
@@ -1,11 +1,11 @@
 
-@import url('https://fonts.googleapis.com/css?family=Montserrat');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,600');
 
 /*Global layout adjustments Start*/
 html { background-color: #fff; }
 body { font-family: "open-sans", sans-serif, Arial; color: #262c38; }
 ul { padding: 0; list-style: none; margin: 0; }
-a.active, a:hover { color: #ea605e; }
+a.active, a:hover { color: #0583e4; }
 .nav > li > a:hover, .nav > li > a:focus { background: transparent; }
 .nav .open > a, .nav .open > a:hover, .nav .open > a:focus { background: transparent; }
 .app:before { background-color: #fff; }
@@ -18,7 +18,7 @@ a.active, a:hover { color: #ea605e; }
 .bredcrumb i { padding: 0 5px; color: #ccc; }
 .bredcrumb a > small { color: #828386; }
 .bg-black { color: #7793a7; background-color: #212121; }
-.bg-black.dk, .bg-black .dk { background-color: #565d67; }
+.bg-black.dk, .bg-black .dk { background-color: transparent; }
 .bg-black .nav > li:hover > a, .bg-black .nav > li:focus > a,
 .bg-black .nav > li.active > a { color: #ffffff; background-color: #4e5663; }
 .bg-black .nav > li > a:hover, .bg-black .nav > li > a:focus { background-color: #4e5663; }
@@ -55,8 +55,9 @@ ul.topbar-links > .call-li { border-right: 1px solid #efefef; padding-right: 24p
 .call-li img { display: inline-block; margin-top: -4px; margin-right: 5px; }
 .icons-info .badge.badge-sm { font-size: 11px; font-weight: normal; }
 .navi ul.nav.edv-nav li a { padding: 26px 35px 22px; font-size: 18px; color: #cdccca; }
-.navi ul.nav.edv-nav > li a { border-bottom: 1px solid #2e2e2e; background: #212121; }
-.editpro { border-top: 1px solid #7d8590; }
+.navi ul.nav.edv-nav > li a { border-bottom: 1px solid #2b2b2b; background: transparent; }
+.editpro { border-top: 1px solid #2b2b2b; }
+.nav.edv-nav li.active{background: #141414}
 .navi ul.nav.edv-nav > li.active > a { color: #fff; }
 .nav-img { display: inline-block !important; margin-top: -7px; vertical-align: top; float: right; }
 .no-border { border: 0 !important; }
@@ -73,15 +74,20 @@ span.block.user-pro-name { font-size: 24px; font-weight: bold; color: #fff; padd
 .nav .open > a, .nav .open > a:hover, .nav .open > a:focus { border-color: #ea605e; }
 .app-aside { -webkit-transition: width 0.1s; transition: width 0.1s; }
 .form-control { border: none; border-bottom: 1px solid #e6e5ea; border-radius: 0; padding-left: 0; padding-right: 0; margin-bottom: 10px; }
-.i-checks input:checked + i:before { background-color: #f05050; }
-.i-checks input:checked + i { border-color: #f05050; }
+.i-checks input:checked + i:before { background-color: #0278d2; }
+.i-checks input:checked + i { border-color: #0278d2; }
 .form-control:focus { border-color: #ea605e; }
 .quiz-manager .select-field > label { padding: 14px 10px 14px 0 !important; }
-.select-field > div > select { background: #cdcdcd; border: 0; margin: 0; padding: 14px; height: 50px; color: #fff; border-radius: 4px; }
+.select-field > div > select { background: #eff2f7; border: 0; margin: 0; padding: 14px; height: 50px; color: #99a6bb; border-radius: 4px; }
 .modal-title { font-size: 20px; font-weight: bold; }
-.app-footer.wrapper { background: #fff; }
+.app-footer.wrapper { background: #262c38; color: #657184}
 .btn-success:hover, .btn-success:focus, .btn-success:active, .btn-success.active,
-.open .dropdown-toggle.btn-success, .btn-success { background: #ec5d61; border-color: #ec5d61; }
+.open .dropdown-toggle.btn-success, .btn-success { background: #ffa409; border-color: #ffa409 !important; }
+.left-bar{border-left: 10px solid #ffa409 !important}
+.nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus{    color: #0278d2; }
+.form-horizontal .control-label{font-weight: bold;}
+.yello-btn{background: #ffa409 !important}
+.yello-btn:hover{background: #f9ad2b !important}
 /*Global layout adjustments End*/
 /*Dashboard Css start*/
 .info-bar { height: 98px; }
@@ -91,16 +97,16 @@ span.block.user-pro-name { font-size: 24px; font-weight: bold; color: #fff; padd
 .info-text strong{color: #0583e4}
 .info-btn { float: right; vertical-align: middle; }
 .fill-btn { display: inline-block; background: #0583e4; -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px; color: #fff; font-size: 15px; padding: 14px 30px 15px; font-weight: bold; border: 0; }
-.fill-btn:hover { background: #e0302e; color: #fff; }
+.fill-btn:hover { background: #0278d2; color: #fff; }
 .info-bar .fill-btn { margin-top: 2px; float: right; }
-.main-title { font-size: 27px;  display: block; font-family: 'Montserrat', sans-serif; font-weight: 800;}
-.reltd-title { font-weight: bold; }
+.main-title { font-size: 27px;  display: block; font-family: 'Montserrat', sans-serif; font-weight: 600;}
+.reltd-title { color: #657184; }
 .graph-value { font-size: 40px; display: block; line-height: normal; margin-top: 6px; }
 .class-list { margin: 0; padding: 0; list-style: none; }
 ul.class-list li { padding: 20px; border-bottom: 1px solid #e6e5ea; }
 ul.class-list li:last-child { border-bottom: 0; }
-.class-title { font-size: 23px; font-weight: bold; }
-.class-time { font-weight: bold; float: right; padding: 5px 0; }
+.class-title { font-size: 23px; font-family: 'Montserrat', sans-serif; }
+.class-time { float: right; padding: 5px 0;color: #0583e4 }
 ul.class-list li:after { content: "."; visibility: hidden; display: block; height: 0; clear: both; }
 .cource-progress { display: inline-block; width: 25%; background: #f0f0f0; vertical-align: top; padding: 0; line-height: 0; margin: 9px 0; float: right; }
 .pregress-bar { padding: 7px 10px; display: inline-block; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; background: #ea605e; }
@@ -108,13 +114,13 @@ ul.class-list li:after { content: "."; visibility: hidden; display: block; heigh
 .pro-img-list img { width: 100%; }
 .pro-img-list { width: 50px; height: 50px; margin-right: 15px; display: inline-block; -webkit-border-radius: 100px; vertical-align: middle; -moz-border-radius: 100px; border-radius: 100px; overflow: hidden; }
 .activity-title { display: inline-block; vertical-align: middle; font-size: 16px; font-weight: 600; }
-span.desc-det { font-size: 14px; font-weight: normal; color: #c6c6c6; }
+span.desc-det { font-size: 14px; font-weight: normal; color: #99a6bb; }
 .desc-lbl { color: #333; }
 .desc-lbl:last-child { padding-left: 8px; }
-.activity-time { color: #c6c6c6; float: right; padding: 3px; }
-.trns-date { padding: 5px 0; min-width: 112px; }
+.activity-time { color: #99a6bb; float: right; padding: 3px; }
+.trns-date { padding: 5px 0; min-width: 112px; color: #0583e4}
 .trans-amt { font-weight: bold; padding-left: 10px; }
-.trans-detail { float: right; padding: 6px 0; }
+.trans-detail { float: right; padding: 6px 0;color: #0583e4 }
 .c-event-grid { display: none; }
 .c-grid { width: 100%; height: auto; min-height: 200px; }
 .calendar .c-pad-top { padding: 2% 1%; }
@@ -124,28 +130,30 @@ span.desc-det { font-size: 14px; font-weight: normal; color: #c6c6c6; }
 .c-day-previous-month, .c-day-next-month { color: #c6c6c6; font-size: 16px; background: #fff; font-weight: bold; }
 .c-day { font-size: 16px; background: #fff; font-weight: bold; }
 .c-week-day { background-color: #fff; color: #555c66; font-size: 19px; }
-.c-grid-title { background: #fff; font-size: 27px; font-weight: bold; display: block; color: #555c66; border-bottom: 1px solid #e6e5ea; margin-bottom: 15px; }
+.c-grid-title { background: #f7f8fc; font-size: 27px; font-weight: bold; display: block; color: #555c66; border-bottom: 1px solid #e6e5ea; margin-bottom: 15px; }
 .c-icon, .c-addicon { width: 12.5%; height: 12%; padding: 2% 2% 0 2%; text-align: left; cursor: pointer; }
 .c-month { width: 50%; }
-.c-day.c-today { background: #ea605e; color: #fff; text-align: center; letter-spacing: 0; -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px; }
-.c-day:hover { background: #ea605e; color: #fff; text-align: center; letter-spacing: 0; -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px; }
+.c-day.c-today { background: #0278d2; color: #fff; text-align: center; letter-spacing: 0; -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px; }
+.c-day:hover { background: #0278d2; color: #fff; text-align: center; letter-spacing: 0; -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px; }
 .c-previous, .c-next { font-weight: normal; color: #a0a0a0; }
 .c-previous { text-align: right; }
 .c-next { text-align: left; }
 .c-grid > .c-previous:hover, .c-next:hover { background: #fff !important; color: #333 !important; }
-.c-addicon { background: url(../img/add-icon.png) 1px center no-repeat; text-indent: -500px; overflow: hidden; }
-.c-icon { background: url(../img/calender-icon.png) #cdcdcd center no-repeat; text-indent: -500px; overflow: hidden; cursor: auto; }
+.c-addicon { background: url(../img/add-icon.png) #f7f8fc 1px center no-repeat; text-indent: -500px; overflow: hidden; }
+.c-icon { background: url(../img/calender-icon.png) #f7f8fc center no-repeat; text-indent: -500px; overflow: hidden; cursor: auto; }
 .bg-black .text-muted { margin-right: 7px; }
 .action-contl { padding-top: 5px; }
 li.active > a > span { color: #fff; }
 .light-bg{background: #f7f8fc}
+.hedlink{margin: 27px 0;}
 /*dashboard css end*/
 /*Edit Profile Start*/
+.change-pro{float: none !important; margin-left: 0 !important}
 .vbox { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 .nav-tabs-alt ul.nav-tabs.nav-justified.profile-tab > li { float: left; position: relative; display: inline-block; width: auto; }
 ul.profile-tab > li.active a { position: relative; }
 .nav-tabs-alt .nav-tabs > li.active > a { border-bottom-color: #fff !important; }
-.nav-tabs-alt .nav-tabs > li a { border-right: 1px solid #dee5e7 !important; }
+.nav-tabs-alt .nav-tabs > li a { border-right: 1px solid #dee5e7 !important; font-weight: bold;}
 .profile-tab a .fa { padding-right: 3px; display: inline-block; }
 .tab-wrap > ul.profile-tab { border-bottom: 1px solid #dee5e7; height: 42px; }
 .profile .vbox { height: auto; }
@@ -176,7 +184,7 @@ ul.profile-tab > li.active a { position: relative; }
 .mycourses .edit-btn { margin: 6px 0; }
 .mycourses .user-thumb { position: relative; height: 114px; width: 114px; overflow: hidden; display: inline-block; margin-right: 20px; }
 .mycourses .i-switch i:before { background-color: #d0d5dc !important; }
-.mycourses .bg-dark { background-color: #ea605e; }
+.mycourses .bg-dark { background-color: #4caf50; }
 .small-title > .title-box > .main-title { font-size: 19px; padding-left: 45px; display: inline-block; vertical-align: bottom; }
 /*My Cources End*/
 /*Create Cource Start*/
@@ -193,7 +201,7 @@ ul.profile-tab > li.active a { position: relative; }
 .view-as { border-radius: 3px; overflow: hidden; }
 .view-as a.view.active { color: #fff; background: #ea605e; }
 .quiz-block > img { width: 100%; display: inline-block; }
-div.states > .desc-det i { color: #ea605e; }
+div.states > .desc-det i { color: #ffa409; }
 .add-quiz .dashed { border: 13px dashed #ededed; display: inline-block; width: 100%; height: 376px; position: relative; }
 .add-quiz .dashed img { max-width: 100%; display: inline-block; position: absolute; top: 0; bottom: 0; left: 0; right: 0; margin: auto; }
 .special-input { margin: 0; border: 1px solid #e6e5ea; padding: 14px; height: inherit; margin-right: 15px; display: inline-block; width: 87px; text-align: center; }
@@ -207,12 +215,12 @@ div.states > .desc-det i { color: #ea605e; }
 .thumb-lg { width: 105px; margin: 0; }
 .user-ms-info { display: inline-block; padding: 23px; padding-right: 0; }
 .messages-board .panel { -webkit-box-shadow: none; box-shadow: none; }
-.username-wro { font-size: 18px; }
+.username-wro { font-size: 18px;color: #0583e4 }
 .message-text { font-size: 16px; padding-top: 8px; display: inline-block; }
-.postmessage { width: 100%; }
-.postmessage input { width: 100%; font-size: 19px; padding: 21px 15px; border: 0; border-bottom: 1px solid #ee5d60; background: #eee; margin-bottom: 1px; }
+.postmessage { width: 100%; border-top: 3px solid #0583e4; background: #fff}
+.postmessage input { width: 100%; font-size: 19px; padding: 21px 15px; border: 0; background: #fff; margin-bottom: 1px; }
 .online-stud-list > li a { padding: 15px 20px; border-bottom: 1px solid #f3f3f3; display: block; }
-.online-stud-list > li a.active, .online-stud-list > li a:hover { background: #ea605e; color: #fff; }
+.online-stud-list > li a.active, .online-stud-list > li a:hover { background: #0583e4; color: #fff; }
 .online-stud-list > li a.active span.avatar { border: 2px solid #fff; }
 .online-tit { border-bottom: 1px solid #dee5e7; font-size: 18px; font-weight: bold; }
 .offline { border-top: 1px solid #dee5e7; }
@@ -220,7 +228,7 @@ div.states > .desc-det i { color: #ea605e; }
 /*forum home list start*/
 .forum-category li a { padding: 19px 0; display: block; border-bottom: 1px solid #dedede; font-size: 15px; }
 .forum-search { position: relative; }
-.forum-search-btn { position: absolute; background: #e95d60; border: 0; top: 0; right: 0; padding: 13px 15px; height: 47px; -webkit-border-top-right-radius: 3px; -webkit-border-bottom-right-radius: 3px; -moz-border-radius-topright: 3px; -moz-border-radius-bottomright: 3px; border-top-right-radius: 3px; border-bottom-right-radius: 3px; }
+.forum-search-btn {background: #ffa409 !important; position: absolute; background: #e95d60; border: 0; top: 0; right: 0; padding: 13px 15px; height: 47px; -webkit-border-top-right-radius: 3px; -webkit-border-bottom-right-radius: 3px; -moz-border-radius-topright: 3px; -moz-border-radius-bottomright: 3px; border-top-right-radius: 3px; border-bottom-right-radius: 3px; }
 .forum-search input.search-for { padding: 12px 59px 12px 16px; width: 100%; font-size: 15px; border: 1px solid #dddce0; border-radius: 3px; margin-bottom: 26px; }
 .paginatoin { float: right; }
 .paginatoin > button.btn-success { border-color: #e95d60; }
@@ -291,21 +299,23 @@ span.label.label-default { display: none !important; }
 .float-rt { float: right; }
 .no-top-border { border-top: 0 !important; }
 .no-bottom-border { border-bottom: 0 !important; }
-.red-text { color: #ea605e; }
-.geen-text { color: #89c541; }
+.red-text { color: #0583e4; }
+.geen-text { color: #4caf50; }
 .light-text { color: #c6c6c6; }
 .help-text .help-block { margin-top: -20px; }
 .help-text { padding-top: 20px; }
 .outlined { border: 1px solid #dddce0; }
 .max-wid-920 { max-width: 920px; margin: auto; }
 .slim-btn { padding: 9px 17px !important; }
-a.link { color: #ea605e !important; }
+a.link { color: #0583e4 !important; }
 .text-center { text-align: center; }
-.outlined-btn.gray-btn { border: 1px solid #cecece; -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px; font-size: 15px; padding: 14px 30px 15px; font-weight: bold; display: inline-block; background: transparent; }
+.outlined-btn.gray-btn { border: 1px solid #657184; color: #657184; -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px; font-size: 15px; padding: 13px 30px 14px; font-weight: bold; display: inline-block; background: transparent; margin-left: 10px;}
 .outlined-btn.gray-btn:hover { border-color: #626973; background: #626973; color: #fff; }
-.outlined-btn.red-btn { border: 1px solid #ea605e; -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px; font-size: 15px; padding: 13px 30px 15px; font-weight: bold; display: inline-block; color: #ea605e; background: transparent; }
-.outlined-btn.red-btn:hover { border-color: #ea605e; background: #ea605e; color: #fff; }
+.outlined-btn.red-btn { border: 1px solid #0278d2; -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px; font-size: 15px; padding: 13px 30px 15px; font-weight: bold; display: inline-block; color: #0278d2; background: transparent; }
+.outlined-btn.red-btn:hover { border-color: #0278d2; background: #0278d2; color: #fff; }
 .clearfix:after { content: "."; visibility: hidden; display: block; height: 0; clear: both; }
+.rev-stat{color: #99a6bb}
+.gray-bg{background: #f7f8fc}
 /*Commen CSS End*/
 /*Media Query Start*/
 @media (max-width: 1400px) {
