--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -24,6 +24,7 @@
     <script src="/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="/angular-ui-bootstrap/dist/ui-bootstrap.js"></script>
     <script src="/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
+    <script src="/socket.io-client/dist/socket.io.js"></script>
     <script src="https://meet.jit.si/external_api.js"></script>
     <script src="/main.js"></script>
 </head>
